--- a/Lexis-main/CSS/Consumer.css
+++ b/Lexis-main/CSS/Consumer.css
@@ -278,6 +278,7 @@ body {
     height: 100%;
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 0;
 }
 
 .service-image img {
@@ -584,7 +585,6 @@ html {
         flex: 1;
         max-width: 1022px;
         height: 678px;
-        border-radius: 4px;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     }
